Fix alignment

--- a/src/components/Quote/styles.module.css
+++ b/src/components/Quote/styles.module.css
@@ -26,7 +26,7 @@
   line-height: 1;
   opacity: 0.3;
   position: absolute;
-  top: -10px;
+  top: -13px;
   transform: translateX(-100%);
 }
 
